# person_detection_service

./: .gitmodules  package.xml  setup.cfg  setup.py
launch/: detect.launch.py  vis.launch.py
log/: latest_build
person_detection_msgs/: CMakeLists.txt  package.xml
person_detection_msgs/msg/: Candidate.msg  CandidateArray.msg
person_detection_ros/: package.xml  setup.cfg  setup.py
person_detection_ros/launch/: detect.launch.py  vis.launch.py
person_detection_ros/person_detection_ros/: eval.py
person_detection_ros/person_detection_ros/system/: SOD.py  kpr_reid.py  person_detection.py  sort.py
person_detection_ros/person_detection_service/: __init__.py  eval.py  eval_bk.py  person_detection_node.py
person_detection_ros/person_detection_service/system/: SOD.py  img_msg_tools.py  kpr_reid.py
person_detection_ros/rviz/: config.rviz
person_detection_service/: eval.py  eval_bk.py  person_detection_node.py  timing.py
person_detection_service/system/: SOD.py  kpr_reid.py  person_detection.py
person_detection_temi/: eval.py  eval_.py  eval_bk.py  person_detection_node.py
person_detection_temi/submodules/: OCL.py  SOD copy.py  SOD.py  SOD_debug.py  SOD_failed.py  adaptive.py  bbox_kalman_filter.py  kpr_onnx.py  kpr_reid.py  memory.py  person_detection.py  utils.py
person_detection_temi/submodules/super_reid/: kpr_reid.py
person_detection_temi/system/: SOD.py  iknn.py  kpr_reid.py  kpr_reid_onnx.py  memory.py  memory_manager.py  person_detection.py  sort.py  tinyTransformer.py  utils.py
rviz/: config.rviz
(+1 files in other folders)
